--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@800&family=Lexend:wght@600&family=Montserrat:wght@700&family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@800&family=Lexend:wght@600&family=Montserrat:wght@700&family=Raleway:wght@500&family=Roboto:wght@500&display=swap');
 
 body {
-    font-family: 'Karla', sans-serif;
+    font-family: 'Raleway', sans-serif;
+   
 }
