--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@ body {
     font-family: 'Raleway', sans-serif;
    
 }
+.container {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.container-centre {
+    max-width: 600px;
+    margin: auto;
+}
