--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html {
     --primary-color: rgb(113, 33, 145);
+    
 }
 body {
     font-family: 'Raleway', sans-serif;
@@ -56,4 +57,18 @@ hr {
 }
 .navigation .link-active {
     font-weight: bold;
+}
+.hero {
+    padding: 2rem;
+}
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+.hero .hero-heading {
+    padding-top: 1rem;
+}
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
 }
