--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html {
     --primary-color: rgb(113, 33, 145);
+    --off-white-color: rgb(208, 208, 208);
     
 }
 body {
@@ -71,4 +72,13 @@ hr {
 }
 .hero .hero-heading .heading-inverted {
     color: var(--primary-color);
+}
+.section {
+    padding: 2rem;
+}
+.section h1 {
+    text-align: center;
+}
+.ow {
+    background-color: var(--off-white-color);
 }
