--- a/style.css
+++ b/style.css
@@ -29,14 +29,15 @@ hr {
 .link-primary {
     background-color:var(--primary-color) ;
     color: white;
-    border-radius:0.5rem ;
-   
-   
+    border-radius:0.5rem ; 
 }
+
 .link-secondary {
     color: var(--primary-color);
     border: 1px solid var(--primary-color);
     border-radius: 0.5rem;
+    display: inline-block;
+    margin-top: 0px;
 }
 .list-unordered {
     list-style: none;
